<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">OneTwo</string>
    <string name="instruction">Press button to add counter</string>
    <string name="add_counter">Add counter</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="counter_add_amount_title">Add to counter</string>
    <string name="counter_subtract_amount_title">Subtract from counter</string>
    <string name="counter_amount_hint">Amount</string>
    <string name="counter_add_amount_content_description">Add amount to counter</string>
    <string name="counter_subtract_amount_content_description">Subtract amount from counter</string>
    <string name="alert_tv_object">Who\'s Playing?</string>
    <string name="alert_tv_number">Lives/Score: </string>
    <string name="menu_counter">Counters</string>
    <string name="menu_dice">Dice</string>
    <string name="menu_chooser">Chooser</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_counter_space">&#160;Counters</string>
    <string name="menu_dice_space">&#160;Dice</string>
    <string name="menu_chooser_space">&#160;Chooser</string>
    <string name="menu_timer_space">&#160;Timer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header">OneTwo</string>
    <string name="dice_title">Dice\'s faces</string>
    <string name="dice_hint">Number of faces</string>
    <string name="touch_me">Place a finger each to choose among you</string>
    <string name="edit">Edit</string>
    <string name="roll">Roll</string>
    <string name="roll_all">Roll All</string>
    <string name="unlock_all">Unlock All</string>
    <string name="dice_total">Total</string>
    <string name="dice_empty_results">Add dice to start rolling</string>
    <string name="dice_type_label" translatable="false">d%1$d</string>
    <string name="dice_result_chip">d%1$d: %2$d</string>
    <string name="add_timer">Add </string>
    <string name="remove_timer">Remove</string>
    <string name="space">      </string>
    <string name="order">Order</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="timer_settings_title">Timer settings</string>
    <string name="timer_base_time_label">Preset</string>
    <string name="timer_custom_time_label">Custom time</string>
    <string name="timer_custom_base_label">Base</string>
    <string name="timer_custom_increment_label">Increment</string>
    <string name="timer_count_label">Timers</string>
    <string name="timer_minutes_unit">min</string>
    <string name="timer_seconds_unit">sec</string>
    <string name="timer_preset_1_0">1 min + 0 sec</string>
    <string name="timer_preset_3_2">3 min + 2 sec</string>
    <string name="timer_preset_5_0">5 min + 0 sec</string>
    <string name="timer_preset_15_10">15 min + 10 sec</string>
    <string name="timer_preset_25_0">25 min + 0 sec</string>
    <string name="timer_preset_short_1_0">1:00 + 0s</string>
    <string name="timer_preset_short_3_2">3:00 + 2s</string>
    <string name="timer_preset_short_5_0">5:00 + 0s</string>
    <string name="timer_preset_short_15_10">15:00 + 10s</string>
    <string name="timer_preset_short_25_0">25:00 + 0s</string>
    <plurals name="timer_count_value">
        <item quantity="one">%1$d timer</item>
        <item quantity="other">%1$d timers</item>
    </plurals>
    <string name="counter_instruction">Press the button to add a counter or swipe right for more options</string>
    <!-- Preference Titles -->
    <string name="ui_header">UI</string>
    <string name="misc_header">Misc</string>

    <!-- UI Preferences -->
    <string name="always_on_title">Always on</string>
    <string name="always_on_summary">Keep screen on while using</string>
    <string name="dark_mode_title" translatable="false">Dark Mode</string>
    <string name="dark_mode_summary" translatable="false">Use dark mode theme</string>
    <string name="chooser_order_title">Chooser order</string>
    <string name="chooser_order_summary">Choose fingers in placement order</string>
    <string name="life_counter_haptic_feedback_title">Life counter haptic feedback</string>
    <string name="life_counter_haptic_feedback_summary">Vibrate when changing life totals</string>

    <string name="quick_add">Quick Add</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d10">d10</string>
    <string name="d20">d20</string>
    <string name="custom">Custom</string>
    <string name="zero">0</string>
    <string name="colon">:</string>
    <string name="content_desc_add_counter">Add Counter</string>
    <string name="content_desc_roll_dice">Roll Dice</string>
    <string name="content_desc_lock_die">Lock die</string>
    <string name="content_desc_unlock_die">Unlock die</string>

    <string name="menu_mtg_life">Life Counter</string>
    <string name="mtg_setup_title">New Game</string>
    <string name="mtg_setup_players">Players</string>
    <string name="mtg_setup_life">Life</string>
    <string name="mtg_setup_start">Start Game</string>
    <string name="mtg_setup_players_error">Must be 1 to 6</string>
    <string name="mtg_setup_life_error">Must be greater than 0</string>
    <string name="mtg_player_label">Player %1$d</string>
    <string name="mtg_btn_minus_desc">Decrease life for player %1$d</string>
    <string name="mtg_btn_plus_desc">Increase life for player %1$d</string>
    <string name="mtg_setup_commander_damage">Commander Damage</string>
    <string name="mtg_commander_damage_cell_desc">Commander damage from player %1$d to player %2$d: %3$d</string>
    <string name="mtg_commander_damage_self_desc">Your own commander damage slot</string>
    <string name="mtg_commander_damage_dialog_title">Commander Damage to Player %1$d</string>
    <string name="mtg_commander_damage_player_label">From Player %1$d</string>
    <string name="mtg_commander_damage_decrease_desc">Decrease commander damage from player %1$d to player %2$d</string>
    <string name="mtg_commander_damage_increase_desc">Increase commander damage from player %1$d to player %2$d</string>
    <string name="mtg_btn_minus_default_desc">Decrease life</string>
    <string name="mtg_btn_plus_default_desc">Increase life</string>
    <string name="default_mtg_life">40</string>
    <string name="mtg_commander_damage_self_label">me</string>
    <string name="mtg_commander_damage_manage_desc">Click to manage commander damage for player %1$d</string>
    <string name="mtg_btn_minus_commander_damage_desc">Decrease commander damage from player %1$d</string>
    <string name="mtg_btn_plus_commander_damage_desc">Increase commander damage from player %1$d</string>

    <string name="mtg_setup_turn_timer">Turn Timer</string>
    <string name="mtg_setup_time">Time</string>
    <string name="mtg_pass_turn">Pass</string>
    <string name="mtg_pass_turn_desc">Pass turn from player %1$d to next player</string>
    <string name="mtg_start_timer_desc">Start timer for player %1$d</string>
    <string name="mtg_player_timer_desc">Player %1$d remaining time: %2$s</string>
    <string name="mtg_setup_choose_and_start">Choose 1st &amp; Start</string>
    <string name="mtg_setup_coach_mark">Game settings, timer and finger chooser</string>
</resources>
