<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/ui_header">

        <SwitchPreferenceCompat
            app:key="always_on"
            app:defaultValue="true"
            app:summary="@string/always_on_summary"
            app:title="@string/always_on_title" />

        <SwitchPreferenceCompat
            app:key="dark_mode"
            app:defaultValue="false"
            app:summary="@string/dark_mode_summary"
            app:title="@string/dark_mode_title" />

        <SwitchPreferenceCompat
            app:key="chooser_order"
            app:defaultValue="false"
            app:summary="@string/chooser_order_summary"
            app:title="@string/chooser_order_title" />

    </PreferenceCategory>


</PreferenceScreen>
