<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mtg_life"
            android:icon="@drawable/cards_playing_outline"
            android:checked="true"
            android:title="@string/menu_mtg_life" />
        <item
            android:id="@+id/nav_dice"
            android:icon="@drawable/dice_multiple"
            android:title="@string/menu_dice" />

        <item
            android:id="@+id/nav_chooser"
            android:icon="@drawable/fingerprint"
            android:title="@string/menu_chooser" />

        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/timer_sand"
            android:title="@string/menu_timer" />

        <item
            android:id="@+id/nav_counter"
            android:icon="@drawable/counter"
            android:title="@string/menu_counter" />

    </group>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings_gear"
        android:title="@string/menu_settings" />
    </group>

</menu>
