<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="8dp"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_weight="1"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/cv_start_1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">


            <Button
                android:id="@+id/start_button_counter"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/menu_counter_space"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:background="@drawable/d20_1"
                android:longClickable="true"
                android:onClick="counterClicked"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/cv_start_2"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">


            <Button
                android:id="@+id/start_button_dice"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/menu_dice_space"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:background="@drawable/d_20_2"
                android:onClick="diceClicked"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:padding="8dp"
        android:layout_height="0dp">

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/cv_start_3"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">


            <Button
                android:id="@+id/chrono"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/menu_chooser_space"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:background="@drawable/d20_3"
                android:longClickable="true"
                android:onClick="chooserClicked"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:id="@+id/cv_timer"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">


            <Button
                android:id="@+id/starts_button_timer"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/menu_timer_space"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="28sp"
                android:background="@drawable/d20_4"
                android:onClick="timerClicked"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>
